--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,4 +4,4 @@ RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
 RewriteRule ^ - [L]
 
 # Fallback all other routes to index.html
-RewriteRule ^ /optionswhatif/index.html [L]
+RewriteRule ^ index.html [L]
