--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "react-refresh": "^0.9.0",
     "react-test-renderer": "^16.13.1"
   }
 }
