--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.2",
     "history": "^4.10.1",
     "react": "^16.13.1",
@@ -11,7 +16,8 @@
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
