add page tracking via encrypted request to backend

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.2",
+    "cryptr": "^6.0.3",
     "history": "^4.10.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/cryptr": "^4.0.1",
     "react-refresh": "^0.9.0",
     "react-test-renderer": "^16.13.1"
   }
