--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/cryptr": "^4.0.1",
+    "react-error-overlay": "6.0.9",
     "react-refresh": "^0.9.0",
     "react-test-renderer": "^16.13.1"
   }
